Formatting profile images on upload

--- a/frame/login.frame.html
+++ b/frame/login.frame.html
@@ -25,7 +25,7 @@
 						<input type="password" class="form-control" id="inputPassword" placeholder="Password" name="pass"
 							value="<?php if (isset($_REQUEST['pass'])) echo $_REQUEST['pass']; ?>">
 					</div>
-					<button type="submit" class="btn btn-primary" name="login">Login</button>
+					<button type="submit" class="btn btn-primary" name="action" value="login">Login</button>
 				</form>
 			</div>
 			<p>
