--- a/frame/profile.frame.html
+++ b/frame/profile.frame.html
@@ -6,7 +6,7 @@
 		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ac eleifend nisl. Mauris vitae tincidunt turpis, quis facilisis orci. Maecenas elementum sapien vitae libero semper commodo. Quisque tincidunt, dui vitae laoreet sollicitudin, sem tellus interdum odio, eu ornare tellus tellus ac tortor. Nulla laoreet urna ligula, ut ultrices dui ultricies et. Proin in viverra tellus. Duis vel sem quis neque molestie vehicula id eu mauris. Mauris eleifend ut est at luctus. Sed nec ligula a lectus ultricies bibendum viverra vitae ante. Suspendisse fringilla turpis nisi. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec fermentum nisl urna, non dictum dolor facilisis eu.
 	</p>
 	<div class="well">
-		<form role="form" action="index.php#profile" method="post" class="form-horizontal clearfix" enctype="multipart/form-data">
+		<form role="form" action="index.php#profile" method="post" class="form-horizontal clearfix" enctype="multipart/form-data" name="profile">
 			<div class="row">
 				<div class="col-sm-2">
 					<div class="img-loader">
@@ -81,7 +81,7 @@
 				</div>
 			</div>
 			<button type="submit" class="btn btn-primary pull-right" name="action" value="profile">Save Changes</button>
-			<button type="reset" class="btn btn-default" name="reset">Reset</button>
+			<button type="reset" class="btn btn-default" id="profile_reset" name="profile_reset">Reset</button>
 		</form>
 	</div>
 	<p>
