Working on data upload file

--- a/frame/meet.frame.html
+++ b/frame/meet.frame.html
@@ -21,7 +21,7 @@
 			</div>
 			<div class="col-sm-4">
 				<div class="thumbnail">
-					<img src="img-full/<?php echo $app->get_image($random_user); ?>" alt="<?php echo $random_user['first'] . ' ' . $random_user['last']; ?>" >
+					<img src="img/full/<?php echo $app->get_image($random_user); ?>" alt="<?php echo $random_user['first'] . ' ' . $random_user['last']; ?>" >
 					<div class="caption text-center">
 						<h4 style="margin:0 auto"><?php echo $random_user['first'] . ' ' . $random_user['last']; ?></h4>
 					</div>
