Login with email or username

--- a/frame/login.frame.html
+++ b/frame/login.frame.html
@@ -16,7 +16,7 @@
 						</div>
 					<?php endif; ?>
 					<div class="form-group">
-						<label for="inputUser">Email address</label>
+						<label for="inputUser">Email address or ELA user-name</label>
 						<input type="text" class="form-control" id="inputUser" placeholder="Enter email" name="user" 
 							value="<?php if (isset($_REQUEST['user'])) echo $_REQUEST['user']; ?>">
 					</div>
