Adding text on undecided conferences

--- a/frame/myELA.frame.html
+++ b/frame/myELA.frame.html
@@ -19,22 +19,21 @@
 						<small><?php echo (is_null($conference['eventID'])) ? 'Undecided': $conference['name']; ?></small>
 					</h2>
 					<?php if ( is_null($conference['eventID']) ): ?>
-						<p>
-							<span class="text-danger">
-								You have not chosen a conference to attend.<br/>
-								You should do this soon.<br/>
-								Below is a list of available conferences.
-							</span>
-							<ul>
-								<li>Conference 1 (<a href="#">about</a>)</li>
-								<li>Conference 2 (<a href="#">about</a>)</li>
-								<li>Conference 3 (<a href="#">about</a>)</li>
-							</ul>
+						<p class="text-danger">
+							You have not chosen a conference to attend.<br/>
+							You should do this soon.<br/>
+							Below is a list of available conferences.
 						</p>
+						<ul>
+							<li>Conference 1 (<a href="#">about</a>)</li>
+							<li>Conference 2 (<a href="#">about</a>)</li>
+							<li>Conference 3 (<a href="#">about</a>)</li>
+						</ul>
 					<?php endif; ?>
 					<?php echo (is_null($conference['workbook'])) ? '' : '<a href="'. $conference['workbook'] .'">Workbook</a><br/>' ; ?>
 					<?php echo (is_null($conference['calendar'])) ? '' : '<a href="'. $conference['calendar'] .'">Calendar</a><br/>' ; ?>
-					<!-- <pre><?php print_r($conference); ?></pre> -->
+					<?php echo (is_null($conference['link'])) ? '' : '<a href="'. $conference['link'] .'">' . $conference['name'] . ' App</a><br/>' ; ?>
+					<!-- <pre><?php // print_r($conference); ?></pre> -->
 				</div>
 			</div>
 		<?php endforeach; ?>
