--- a/frame/profile.frame.html
+++ b/frame/profile.frame.html
@@ -73,6 +73,20 @@
 								value="<?php echo $_SESSION['user']['state']; ?>">
 						</div>
 					</div>
+					<div class="form-group">
+						<label for="user_phone" class="col-sm-3 control-label">Phone</label>
+						<div class="col-sm-9">
+							<input type="text" class="form-control" id="user_phone" placeholder="Phone" name="phone"
+								value="<?php echo $_SESSION['user']['phone']; ?>">
+						</div>
+					</div>
+					<div class="form-group">
+						<label for="user_email" class="col-sm-3 control-label">Email</label>
+						<div class="col-sm-9">
+							<input type="text" class="form-control" id="user_email" placeholder="Email" name="email"
+								value="<?php echo $_SESSION['user']['email']; ?>">
+						</div>
+					</div>
 				</div>
 				<div class="col-sm-6">
 					<label for="user_bio">Biography</label>
