--- a/admin/tpl/footer.tpl.html
+++ b/admin/tpl/footer.tpl.html
@@ -1,6 +1,6 @@
 
 	</div>
-	<!-- <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular.min.js"></script> -->
-	<!-- <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.10.0/ui-bootstrap-tpls.min.js"></script> -->
+	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular.min.js"></script>
+	<script src="admin.js"></script>
 </body>
 </html>
