--- a/admin/tpl/header.tpl.html
+++ b/admin/tpl/header.tpl.html
@@ -12,20 +12,24 @@
 	<div class="container">
 		<div class="header">
 			<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-				<div class="container-fluid">
+				<div class="container">
 					<div class="navbar-header">
 						<a class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</a>
-						<a class="navbar-brand" href=".">ELA Admin</a>
+						<a class="navbar-brand" href=".">Admin</a>
 					</div>
-
-					<ul class="nav navbar-nav navbar-right">
-						<li <?php echo strpos($_SERVER['PHP_SELF'],'uploa')===false?'':'class="active"'; ?>><a href="uploader.php">Upload</a></li>
+					<ul class="nav navbar-nav">
+						<li <?php echo strpos($_SERVER['PHP_SELF'],'emulate')===false?'':'class="active"'; ?>><a href="emulate.php">Emulate</a></li>
 						<li <?php echo strpos($_SERVER['PHP_SELF'],'event')===false?'':'class="active"'; ?>><a href="event.php">Event</a></li>
 						<li <?php echo strpos($_SERVER['PHP_SELF'],'quote')===false?'':'class="active"'; ?>><a href="quote.php">Quote</a></li>
+						<li <?php echo strpos($_SERVER['PHP_SELF'],'uploa')===false?'':'class="active"'; ?>><a href="uploader.php">Upload</a></li>
+					</ul>
+
+					<ul class="nav navbar-nav navbar-right">
+						<li><a href="..">App</a></li>
 						<li <?php echo strpos($_SERVER['PHP_SELF'],'log')===false?'':'class="active"'; ?>><a href="?action=logout">Logout</a></li>
 					</ul>
 				</div><!-- /.container-fluid -->
