--- a/admin/tpl/header.tpl.html
+++ b/admin/tpl/header.tpl.html
@@ -23,11 +23,11 @@
 						<a class="navbar-brand" href=".">Admin</a>
 					</div>
 					<ul class="nav navbar-nav">
-						<li <?php echo strpos($_SERVER['PHP_SELF'],'admins')===false?'':'class="active"'; ?>><a href="admins.php">Admins</a></li>
 						<li <?php echo strpos($_SERVER['PHP_SELF'],'emulate')===false?'':'class="active"'; ?>><a href="emulate.php">Emulate</a></li>
 						<li <?php echo strpos($_SERVER['PHP_SELF'],'event')===false?'':'class="active"'; ?>><a href="event.php">Event</a></li>
 						<li <?php echo strpos($_SERVER['PHP_SELF'],'quote')===false?'':'class="active"'; ?>><a href="quote.php">Quote</a></li>
 						<li <?php echo strpos($_SERVER['PHP_SELF'],'uploa')===false?'':'class="active"'; ?>><a href="uploader.php">Upload</a></li>
+						<li <?php echo strpos($_SERVER['PHP_SELF'],'users')===false?'':'class="active"'; ?>><a href="users.php">Users</a></li>
 					</ul>
 
 					<ul class="nav navbar-nav navbar-right">
