--- a/admin/tpl/header.tpl.html
+++ b/admin/tpl/header.tpl.html
@@ -22,13 +22,15 @@
 						</a>
 						<a class="navbar-brand" href=".">Admin</a>
 					</div>
-					<ul class="nav navbar-nav">
-						<li <?php echo strpos($_SERVER['PHP_SELF'],'emulate')===false?'':'class="active"'; ?>><a href="emulate.php">Emulate</a></li>
-						<li <?php echo strpos($_SERVER['PHP_SELF'],'event')===false?'':'class="active"'; ?>><a href="event.php">Event</a></li>
-						<li <?php echo strpos($_SERVER['PHP_SELF'],'quote')===false?'':'class="active"'; ?>><a href="quote.php">Quote</a></li>
-						<li <?php echo strpos($_SERVER['PHP_SELF'],'uploa')===false?'':'class="active"'; ?>><a href="uploader.php">Upload</a></li>
-						<li <?php echo strpos($_SERVER['PHP_SELF'],'users')===false?'':'class="active"'; ?>><a href="users.php">Users</a></li>
-					</ul>
+					<?php if ($admin->requiresAdmin(false)): ?>
+						<ul class="nav navbar-nav">
+							<li <?php echo strpos($_SERVER['PHP_SELF'],'emulate')===false?'':'class="active"'; ?>><a href="emulate.php">Emulate</a></li>
+							<li <?php echo strpos($_SERVER['PHP_SELF'],'event')===false?'':'class="active"'; ?>><a href="event.php">Event</a></li>
+							<li <?php echo strpos($_SERVER['PHP_SELF'],'quote')===false?'':'class="active"'; ?>><a href="quote.php">Quote</a></li>
+							<li <?php echo strpos($_SERVER['PHP_SELF'],'uploa')===false?'':'class="active"'; ?>><a href="uploader.php">Upload</a></li>
+							<li <?php echo strpos($_SERVER['PHP_SELF'],'users')===false?'':'class="active"'; ?>><a href="users.php">Users</a></li>
+						</ul>
+					<?php endif; ?>
 
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="..">App</a></li>
