--- a/admin/tpl/header.tpl.html
+++ b/admin/tpl/header.tpl.html
@@ -5,11 +5,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<title>ELA Admin</title>
 	<link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
+	<link href="../css.css" rel="stylesheet">
 	<style>
 		body { padding-top: 70px; }
 	</style>
 </head>
-<body>
+<body data-ng-app="ela-admin">
 	<div class="container">
 		<div class="header">
 			<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
