Finishing user Quizzer

--- a/admin/tpl/footer.tpl.html
+++ b/admin/tpl/footer.tpl.html
@@ -1,6 +1,7 @@
 
 	</div>
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular.min.js"></script>
+	<script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.10.0.min.js"></script>
 	<script src="admin.js"></script>
 </body>
 </html>
