--- a/admin/tpl/header.tpl.html
+++ b/admin/tpl/header.tpl.html
@@ -29,6 +29,7 @@
 							<li <?php echo strpos($_SERVER['PHP_SELF'],'quote')===false?'':'class="active"'; ?>><a href="quote.php">Quote</a></li>
 							<li <?php echo strpos($_SERVER['PHP_SELF'],'uploa')===false?'':'class="active"'; ?>><a href="uploader.php">Upload</a></li>
 							<li <?php echo strpos($_SERVER['PHP_SELF'],'users')===false?'':'class="active"'; ?>><a href="users.php">Users</a></li>
+							<li <?php echo strpos($_SERVER['PHP_SELF'],'quiz')===false?'':'class="active"'; ?>><a href="quiz.php">User Quizzer</a></li>
 						</ul>
 					<?php endif; ?>
 
