--- a/tpl/profile.frame.html
+++ b/tpl/profile.frame.html
@@ -92,6 +92,31 @@
 					<label for="user_bio">Biography</label>
 					<textarea id="user_bio" class="form-control text-auto-scale" placeholder="Bio..." rows="10" name="bio"><?php echo $_SESSION['user']['bio']; ?></textarea>
 					<p class="help-block">* Your first name is automatically prepended when printing</p>
+
+					<div class="well">
+						<div class="col-sm-9 col-sm-offset-3">
+							<h4>Change Password</h4>
+							<?php if (in_array('save-profile-pw', $app->status)): ?>
+								<div class="alert alert-danger">
+									<strong>Passwords mismatch</strong> 
+									We were unable to change your password.
+								</div>
+							<?php endif; ?>
+						</div>
+						<div class="form-group">
+							<label for="user_pass" class="col-sm-3 control-label">Password</label>
+							<div class="col-sm-9">
+								<input type="password" class="form-control" id="user_pass" placeholder="Password" name="pass">
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="user_confirm" class="col-sm-3 control-label">Confirm</label>
+							<div class="col-sm-9">
+								<input type="password" class="form-control" id="user_confirm" placeholder="Confirm" name="confirm">
+							</div>
+						</div>
+					</div>
+
 				</div>
 			</div>
 			<button type="submit" class="btn btn-primary pull-right" name="action" value="profile">Save Changes</button>
