--- a/tpl/home.frame.html
+++ b/tpl/home.frame.html
@@ -2,7 +2,7 @@
 	<div class="page-header">
 		<h1>Welcome to <abbr title="Emerging Learders Academy">ELA</abbr> <small>from <a href="http://upstreamacademy.com">Upstream Academy</a></small></h1>
 	</div>
-	<img class="pull-right img-responsive col-sm-3 hidden-xs img-rounded" src="data/img/logo-color.png" alt="Business">
+	<img class="pull-right img-responsive col-sm-2 hidden-sm hidden-xs img-rounded" src="data/img/logo-color.png" alt="Business">
 	<p class="lead">
 		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ac eleifend nisl. Mauris vitae tincidunt turpis, quis facilisis orci. Maecenas elementum sapien vitae libero semper commodo. Quisque tincidunt, dui vitae laoreet sollicitudin, sem tellus interdum odio, eu ornare tellus tellus ac tortor. Nulla laoreet urna ligula, ut ultrices dui ultricies et. Proin in viverra tellus. Duis vel sem quis neque molestie vehicula id eu mauris. Mauris eleifend ut est at luctus. Sed nec ligula a lectus ultricies bibendum viverra vitae ante. Suspendisse fringilla turpis nisi. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec fermentum nisl urna, non dictum dolor facilisis eu.
 	</p>
