--- a/tpl/meet.frame.html
+++ b/tpl/meet.frame.html
@@ -1,10 +1,10 @@
 <div class="container" id="meet">
 
-	<div class="col-sm-4">
+	<div class="col-sm-2 hidden-sm hidden-xs">
 		<img src="data/img/logo-color.png" alt="Emerging Leaders Academy" class="img-responsive thumbnail" style="padding:20px">
 	</div>
 
-	<div class="col-sm-8">
+	<div class="col-sm-10">
 
 		<div class="well clearfix">
 			<?php $random_user = $app->random_user(); ?>
