Georgia: txt and layout customization

--- a/tpl/login.frame.html
+++ b/tpl/login.frame.html
@@ -3,7 +3,7 @@
 		<h1>Login</h1>
 	</div>
 	<p class="lead">
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ac eleifend nisl. Mauris vitae tincidunt turpis, quis facilisis orci. Maecenas elementum sapien vitae libero semper commodo. Quisque tincidunt, dui vitae laoreet sollicitudin, sem tellus interdum odio, eu ornare tellus tellus ac tortor. Nulla laoreet urna ligula, ut ultrices dui ultricies et. Proin in viverra tellus. Duis vel sem quis neque molestie vehicula id eu mauris. Mauris eleifend ut est at luctus. Sed nec ligula a lectus ultricies bibendum viverra vitae ante. Suspendisse fringilla turpis nisi. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec fermentum nisl urna, non dictum dolor facilisis eu.
+		Log in to see information on your conference, view the workbook for ELA and connect with other ELA participants.
 	</p>
 	<div class="row">
 		<div class="col-sm-6 col-sm-offset-1">
