--- a/tpl/search.frame.html
+++ b/tpl/search.frame.html
@@ -1,9 +1,9 @@
-<div class="container" id="contacts" data-ng-controller="search">
+<div class="container" id="participants" data-ng-controller="search">
 	<div class="page-header">
-		<h1>Contacts</h1>
+		<h1>Participants</h1>
 	</div>
 	<p class="lead">
-		Find your friends and colleagues from ELA right here.
+		Connect with other ELA participants.  You can search by name, specialty, city, firm, etc.
 	</p>
 
 	<div class="row">
