--- a/tpl/nav.tpl.html
+++ b/tpl/nav.tpl.html
@@ -11,11 +11,11 @@
 		<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav">
 				<li class="active"><a href="#home">Home</a></li>
-				<li><a href="#about">About</a></li>
-				<li class="dropdown">
+				<li><a href="#faq">FAQ</a></li>
+				<?php if ($auth): ?><li><a href="#participants">Participants</a></li><?php endif; ?>
+				<!-- <li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Tools <b class="caret"></b></a>
 					<ul class="dropdown-menu">
-						<li><a href="#faq">FAQ</a></li>
 						<?php if ($auth): ?><li><a href="#contacts">Contacts</a></li><?php endif; ?>
 						<li><a href="#samples">Project Samples</a></li>
 						<li class="divider"></li>
@@ -26,14 +26,18 @@
 						<li class="dropdown-header">External Links</li>
 						<li><a href="http://ela.upstreamacademy.com/" target="blank">Progress Tracker</a></li>
 					</ul>
-				</li>
+				</li> -->
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
+				<?php if (isset($_SESSION['admin'])): ?>
+					<li><a href="admin/">Admin</a></li>
+				<?php endif; ?>
 				<?php if ($auth): ?>
-					<?php if (isset($_SESSION['admin'])): ?>
-						<li><a href="admin/">Admin</a></li>
-					<?php endif; ?>
-					<li class="dropdown">
+					<li><a href="http://ela.upstreamacademy.com">OPT System</a></li>
+					<li><a href="#myela">My ELA</a></li>
+					<li><a href="#profile">My Profile</a></li>
+					<li><a href="index.php?action=logout">Logout</a></li>
+					<!-- <li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">
 							<?php echo $_SESSION['user']['first'] . ' ' . $_SESSION['user']['last']; ?>
 							<b class="caret"></b>
@@ -43,11 +47,8 @@
 							<li><a href="#profile">Profile</a></li>
 							<li><a href="index.php?action=logout">Logout</a></li>
 						</ul>
-					</li>
+					</li> -->
 				<?php else: ?>
-					<?php if (isset($_SESSION['admin'])): ?>
-						<li><a href="admin/">Admin</a></li>
-					<?php endif; ?>
 					<li><a href="#login">Login</a></li>
 				<?php endif; ?>
 			</ul>
