--- a/tpl/profile.frame.html
+++ b/tpl/profile.frame.html
@@ -1,9 +1,9 @@
 <div class="container" id="profile">
 	<div class="page-header">
-		<h1>Profile <small><?php echo $_SESSION['user']['first'] . ' ' . $_SESSION['user']['last']; ?></small></h1>
+		<h1>My Profile <small><?php echo $_SESSION['user']['first'] . ' ' . $_SESSION['user']['last']; ?></small></h1>
 	</div>
 	<p class="lead">
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ac eleifend nisl. Mauris vitae tincidunt turpis, quis facilisis orci. Maecenas elementum sapien vitae libero semper commodo. Quisque tincidunt, dui vitae laoreet sollicitudin, sem tellus interdum odio, eu ornare tellus tellus ac tortor. Nulla laoreet urna ligula, ut ultrices dui ultricies et. Proin in viverra tellus. Duis vel sem quis neque molestie vehicula id eu mauris. Mauris eleifend ut est at luctus. Sed nec ligula a lectus ultricies bibendum viverra vitae ante. Suspendisse fringilla turpis nisi. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec fermentum nisl urna, non dictum dolor facilisis eu.
+		The information listed here is used in the Participant section above.  Feel free to make changes to your information.  Be sure to click on Save Changes when finished.  The contact information will be changed immediately.  The photo will take a few days to update.
 	</p>
 	<div class="well">
 		<form role="form" action="index.php#profile" method="post" class="form-horizontal clearfix" enctype="multipart/form-data" name="profile">
@@ -91,7 +91,10 @@
 				<div class="col-sm-6">
 					<label for="user_bio">Biography</label>
 					<textarea id="user_bio" class="form-control text-auto-scale" placeholder="Bio..." rows="10" name="bio"><?php echo $_SESSION['user']['bio']; ?></textarea>
-					<p class="help-block">* Your first name is automatically prepended when printing</p>
+					<p class="help-block">
+						* Your name will automatically be added to the bio section.<br/>
+						Please make sure this section starts with a verb.
+					</p>
 
 					<div class="well">
 						<div class="col-sm-9 col-sm-offset-3">
@@ -123,7 +126,4 @@
 			<button type="reset" class="btn btn-default" id="profile_reset" name="profile_reset">Reset</button>
 		</form>
 	</div>
-	<p>
-		In feugiat tincidunt tortor. Quisque cursus purus a justo egestas, id consectetur tellus vulputate. Quisque sed blandit nulla. Nunc fringilla quis lacus eget hendrerit. Etiam tincidunt metus at nisl scelerisque dapibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus vestibulum mauris lacus, nec accumsan lectus adipiscing nec. Vestibulum convallis suscipit lectus vitae eleifend. Proin luctus pulvinar mi et elementum. Pellentesque luctus, metus quis elementum dictum, leo lorem posuere odio, vel accumsan tellus odio at risus. Proin tempus imperdiet quam nec vestibulum.
-	</p>
 </div>
