Georgia: turn down title size + add text

--- a/tpl/search.frame.html
+++ b/tpl/search.frame.html
@@ -5,6 +5,9 @@
 	<p class="lead">
 		Connect with other ELA participants.  You can search by name, specialty, city, firm, etc.
 	</p>
+	<p>
+		If you click on any participant listed, you can add your own notes.  Use this to build your personal network.
+	</p>
 
 	<div class="row">
 		<div class="col-md-7 col-sm-8"><!-- search -->
