Georgia: fixing fuzzy ela logo

--- a/tpl/home.frame.html
+++ b/tpl/home.frame.html
@@ -2,7 +2,7 @@
 	<div class="page-header">
 		<h1>Welcome to Emerging Leaders Academy</h1>
 	</div>
-	<img class="pull-right img-responsive col-sm-2 hidden-sm hidden-xs img-rounded" src="data/img/logo-color.png" alt="Business">
+	<img class="pull-right img-rounded" src="data/img/ELALogo.png" alt="Business">
 	<p class="lead">
 		This page is intended as a handy reference for the Emerging Leaders Academy program, but please don't hesitate to contact any of us with questions.
 	</p>
