--- a/tpl/nav.tpl.html
+++ b/tpl/nav.tpl.html
@@ -11,6 +11,7 @@
 		<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav">
 				<li class="active"><a href="#home">Home</a></li>
+				<li><a href="#team">Our Team</a></li>
 				<li><a href="#faq">FAQ</a></li>
 				<?php if ($auth): ?><li><a href="#participants">Participants</a></li><?php endif; ?>
 				<!-- <li class="dropdown">
