Gerogia: use colors from workbooks

--- a/tpl/login.frame.html
+++ b/tpl/login.frame.html
@@ -1,6 +1,8 @@
 <div class="container" id="login">
 	<div class="page-header">
-		<h1>Login</h1>
+		<div class="container">
+			<h1>Login</h1>
+		</div>
 	</div>
 	<p class="lead">
 		Log in to see information on your conference, view the workbook for ELA and connect with other ELA participants.
@@ -46,7 +48,7 @@
 			</p>
 		</div>
 		<div class="col-sm-3 col-sm-offset-1 hidden-xs">
-			<img class="img-responsive img-rounded" src="data/img/buiz6.jpg" alt="Business">
+			<img class="img-responsive img-rounded" src="data/img/SamAndTim.jpg" alt="Sam and Tim">
 		</div>
 	</div>
 </div>
