--- a/tpl/profile.frame.html
+++ b/tpl/profile.frame.html
@@ -1,6 +1,8 @@
 <div class="container" id="profile">
 	<div class="page-header">
-		<h1>My Profile <small><?php echo $_SESSION['user']['first'] . ' ' . $_SESSION['user']['last']; ?></small></h1>
+		<div class="container">
+			<h1>My Profile <small><?php echo $_SESSION['user']['first'] . ' ' . $_SESSION['user']['last']; ?></small></h1>
+		</div>
 	</div>
 	<p class="lead">
 		The information listed here is used in the Participant section above.  Feel free to make changes to your information.  Be sure to click on Save Changes when finished.  The contact information will be changed immediately.  The photo will take a few days to update.
