--- a/tpl/search.frame.html
+++ b/tpl/search.frame.html
@@ -1,6 +1,8 @@
 <div class="container" id="participants" data-ng-controller="search">
 	<div class="page-header">
-		<h1>Participants</h1>
+		<div class="container">
+			<h1>Participants</h1>
+		</div>
 	</div>
 	<p class="lead">
 		Connect with other ELA participants.  You can search by name, specialty, city, firm, etc.
