--- a/tpl/faq.frame.html
+++ b/tpl/faq.frame.html
@@ -4,7 +4,9 @@
 ?>
 <div class="container" id="faq">
 	<div class="page-header">
-		<h1>Frequently Asked Questions</h1>
+		<div class="container">
+			<h1>Frequently Asked Questions</h1>
+		</div>
 	</div>
 	<div class="col-sm-9">
 		<p class="lead">
@@ -30,6 +32,6 @@
 		</div>
 	</div>
 	<div class="col-sm-3 hidden-xs">
-		<img class="img-responsive img-rounded" src="data/img/buiz3.jpg" alt="Business">
+		<img class="img-responsive img-rounded" src="data/img/Sam.jpg" alt="Sam">
 	</div>
 </div>
