--- a/tpl/home.frame.html
+++ b/tpl/home.frame.html
@@ -1,6 +1,8 @@
 <div class="container" id="home">
 	<div class="page-header">
-		<h1>Welcome to Emerging Leaders Academy</h1>
+		<div class="container">
+			<h1>Welcome to Emerging Leaders Academy</h1>
+		</div>
 	</div>
 	<img class="pull-right img-rounded" src="data/img/ELALogo.png" alt="Business">
 	<p class="lead">
