--- a/tpl/meet.frame.html
+++ b/tpl/meet.frame.html
@@ -1,4 +1,4 @@
-<div class="container" id="meet">
+<div class="container" id="meet" style="padding-top:60px">
 
 	<div class="col-sm-2 hidden-sm hidden-xs">
 		<img src="data/img/logo-color.png" alt="Emerging Leaders Academy" class="img-responsive thumbnail" style="padding:20px">
@@ -9,7 +9,7 @@
 		<?php $random_user = $app->random_user(); ?>
 		<div class="well clearfix" data-ng-click="open_dlg('<?=$random_user['accountno']; ?>')">
 			<div class="col-sm-8">
-				<div class="page-header" style="margin-top:0">
+				<div class="page-header" style="margin-top:0;position:relative;padding-top:40px">
 					<div class="pull-right">
 						<a href="tel:<?php echo $random_user['phone']; ?>"><i class="glyphicon glyphicon-phone-alt"></i></a>
 						<a href="mailto:<?php echo $random_user['email']; ?>"><i class="glyphicon glyphicon-envelope"></i></a>
