--- a/tpl/reset.frame.html
+++ b/tpl/reset.frame.html
@@ -1,6 +1,8 @@
 <div class="container" id="reset">
 	<div class="page-header">
-		<h1>Reset Password</h1>
+		<div class="container">
+			<h1>Reset Password</h1>
+		</div>
 	</div>
 	<p class="lead">
 		<?php print_r($_REQUEST); ?>
