--- a/tpl/upstream.frame.html
+++ b/tpl/upstream.frame.html
@@ -1,6 +1,8 @@
 <div class="container" id="team">
 	<div class="page-header">
-		<h1>Our Team</h1>
+		<div class="container">
+			<h1>Our Team</h1>
+		</div>
 	</div>
 
 	<!-- style -->
