Update links + quotes

--- a/tpl/nav.tpl.html
+++ b/tpl/nav.tpl.html
@@ -34,7 +34,7 @@
 					<li><a href="admin/">Admin</a></li>
 				<?php endif; ?>
 				<?php if ($auth): ?>
-					<li><a href="http://ela.upstreamacademy.com">OPT System</a></li>
+					<li><a href="http://ela.upstreamacademy.com" target="_blank">OPT System</a></li>
 					<li><a href="#myela">My ELA</a></li>
 					<li><a href="#profile">My Profile</a></li>
 					<li><a href="index.php?action=logout">Logout</a></li>
