--- a/tpl/meet.frame.html
+++ b/tpl/meet.frame.html
@@ -1,7 +1,7 @@
 <div class="container" id="meet" style="padding-top:60px">
 
 	<div class="col-sm-2 hidden-sm hidden-xs">
-		<img src="data/img/logo-color.png" alt="Emerging Leaders Academy" class="img-responsive thumbnail" style="padding:20px">
+		<img src="data/img/ELALogo.png" alt="Emerging Leaders Academy" class="img-responsive thumbnail" style="padding:20px">
 	</div>
 
 	<div class="col-sm-10" data-ng-controller="meet">
