Kelsey: various edits
Profile Text Update
My ELA info mailto link
Our Team images link to upstreamacadamy.com website

--- a/tpl/myELA.frame.html
+++ b/tpl/myELA.frame.html
@@ -16,7 +16,7 @@
 		</div>
 	</div>
 	<p class="lead">
-		In this section, you will find information about the conference you chose, a link to the current calendar, the guide name we have on file, and a PDF copy of the ELA workbook.  If you need to change your conference or guide selection, please contact us at <a href="info@upstreamacademy.com">info@upstreamacademy.com</a>.  Please remember to enter information on your goals and your project in the <a href="http://ela.upstreamacademy.com/">OPT System</a>.
+		In this section, you will find information about the conference you chose, a link to the current calendar, the guide name we have on file, and a PDF copy of the ELA workbook.  If you need to change your conference or guide selection, please contact us at <a href="mailto:info@upstreamacademy.com">info@upstreamacademy.com</a>.  Please remember to enter information on your goals and your project in the <a href="http://ela.upstreamacademy.com/">OPT System</a>.
 	</p>
 	<div class="row">
 		<?php foreach ($conferences as $conference): ?>
