--- a/tpl/profile.frame.html
+++ b/tpl/profile.frame.html
@@ -94,7 +94,7 @@
 					<label for="user_bio">Biography</label>
 					<textarea id="user_bio" class="form-control text-auto-scale" placeholder="Bio..." rows="10" name="bio"><?php echo $_SESSION['user']['bio']; ?></textarea>
 					<p class="help-block">
-						* Your name will automatically be added to the bio section.<br/>
+						* Your name, title and company will automatically be added to the bio section.<br/>
 						Please make sure this section starts with a verb.
 					</p>
 
