--- a/tpl/upstream.frame.html
+++ b/tpl/upstream.frame.html
@@ -28,20 +28,20 @@
 
 	<!-- html -->
 	<div class="upstream_team" onmouseout="UA.team.hide(event, this)">
-		<img usemap="#team_map" src="./data/team/UATeamAll.jpg" id="Team"    alt="UA Team"      style="visibility: visible;">
-		<img usemap="#team_map" src="./data/team/UATeamDev.jpg" id="Dev"     alt="Dev Warren">
-		<img usemap="#team_map" src="./data/team/UATeamJen.jpg" id="Jenny"   alt="Jenny Fuller">
-		<img usemap="#team_map" src="./data/team/UATeamRan.jpg" id="Randl"   alt="Randl Ockey">
-		<img usemap="#team_map" src="./data/team/UATeamKel.jpg" id="Kelsey"  alt="Kelsey Ferro">
-		<img usemap="#team_map" src="./data/team/UATeamTim.jpg" id="Tim"     alt="Tim Bartz">
-		<img usemap="#team_map" src="./data/team/UATeamGeo.jpg" id="Georgia" alt="Georgia Cummings">
-		<img usemap="#team_map" src="./data/team/UATeamSam.jpg" id="Sam"     alt="Sam Allred">
+		<img usemap="#team_map" src="http://upstreamacademy.com/images/UATeamAll.jpg"      id="Team"    alt="UA Team" style="visibility: visible;">
+		<img usemap="#team_map" src="http://upstreamacademy.com/images/UATeamDev2.jpg"     id="Dev"     alt="Dev Warren">
+		<img usemap="#team_map" src="http://upstreamacademy.com/images/UATeamJenny2.jpg"   id="Jenny"   alt="Jenny Fuller">
+		<img usemap="#team_map" src="http://upstreamacademy.com/images/UATeamRandl2.jpg"   id="Randl"   alt="Randl Ockey">
+		<img usemap="#team_map" src="http://upstreamacademy.com/images/UATeamKelsey2.jpg"  id="Kelsey"  alt="Kelsey Ferro">
+		<img usemap="#team_map" src="http://upstreamacademy.com/images/UATeamTim2.jpg"     id="Tim"     alt="Tim Bartz">
+		<img usemap="#team_map" src="http://upstreamacademy.com/images/UATeamGeorgia2.jpg" id="Georgia" alt="Georgia Cummings">
+		<img usemap="#team_map" src="http://upstreamacademy.com/images/UATeamSam2.jpg"     id="Sam"     alt="Sam Allred">
 
 		<map name="team_map">
 			<area shape="poly" href="mailto:devw@upstreamacademy.com"     alt="Email Dev"     coords="244,626,242,606,67,604,69,618,69,622,69,628">
-			<area shape="poly" href="mailto:miket@upstreamacademy.com"    alt="Email Jenny"   coords="258,670,256,650,81,648,83,662,83,666,83,672">
+			<area shape="poly" href="mailto:jennyf@upstreamacademy.com"   alt="Email Jenny"   coords="258,670,256,650,81,648,83,662,83,666,83,672">
 			<area shape="poly" href="mailto:randlo@upstreamacademy.com"   alt="Email Randl"   coords="252,723,247,700,77,697,79,711,79,715,79,721">
-			<area shape="poly" href="mailto:kelseyf@upstreamacademy.com"  alt="Email Kelsey"  coords="257,764,259,740,85,740,87,754,87,758,87,764">
+			<area shape="poly" href="mailto:kelseym@upstreamacademy.com"  alt="Email Kelsey"  coords="257,764,259,740,85,740,87,754,87,758,87,764">
 			<area shape="poly" href="mailto:timb@upstreamacademy.com"     alt="Email Tim"     coords="248,811,249,793,79,794,78,801,78,805,78,811">
 			<area shape="poly" href="mailto:georgiac@upstreamacademy.com" alt="Email Georgia" coords="254,856,256,832,82,832,84,846,84,850,84,856">
 			<area shape="poly" href="mailto:sama@upstreamacademy.com"     alt="Email Sam"     coords="253,908,255,884,81,884,83,898,83,902,83,908">
