Moving remote located photos

--- a/tpl/meet.frame.html
+++ b/tpl/meet.frame.html
@@ -25,7 +25,7 @@
 			</div>
 			<div class="col-sm-4">
 				<div class="thumbnail">
-					<img src="http://upstreamacademy.com/images/ELAApp/<?php echo $random_user['img']; ?>" alt="<?php echo $random_user['first'] . ' ' . $random_user['last']; ?>" >
+					<img src="http://upstreamacademy.com/apps/<?php echo $random_user['img']; ?>" alt="<?php echo $random_user['first'] . ' ' . $random_user['last']; ?>" >
 					<div class="caption text-center">
 						<h4 style="margin:0 auto"><?php echo $random_user['first'] . ' ' . $random_user['last']; ?></h4>
 					</div>
