--- a/tpl/note.tpl.html
+++ b/tpl/note.tpl.html
@@ -5,7 +5,7 @@
 	<div class="row">
 		<div class="col-xs-4 image">
 			<img 
-				ng-src="http://upstreamacademy.com/images/ELAApp/{{person.img}}"
+				ng-src="http://upstreamacademy.com/apps/{{person.img}}"
 				class="img-rounded img-responsive center-block"
 				ng-attr-title="{{person.first}} {{person.last}}" />
 		</div>
