--- a/tpl/profile.frame.html
+++ b/tpl/profile.frame.html
@@ -13,7 +13,7 @@
 				<div class="col-sm-2">
 					<div class="img-loader">
 						<img id="actual_user_image" class="img-responsive img-rounded" style="margin-bottom: 10px"
-							src="http://upstreamacademy.com/images/ELAApp/<?php echo $_SESSION['user']['img']; ?>">
+							src="http://upstreamacademy.com/apps/<?php echo $_SESSION['user']['img']; ?>">
 						<img class="spinner" alt="..." src="data/img/spinner.gif" />
 					</div>
 					<input id="user_image" type="file" class="hide" accept="image/*" name="image" />
