--- a/tpl/search.frame.html
+++ b/tpl/search.frame.html
@@ -62,7 +62,7 @@
 						data-ng-click="view(user)" >
 						<td>
 							<div class="center-cropped pull-left img-rounded">
-								<img data-ng-src="http://upstreamacademy.com/images/ELAApp/{{user.img}}" class="img-rounded" height="100" 
+								<img data-ng-src="http://upstreamacademy.com/apps/{{user.img}}" class="img-rounded" height="100" 
 								data-ng-attr-title="{{user.first}} {{user.last}}"
 								data-ng-attr-alt="{{user.first}} {{user.last}}" alt="John Doe" src="data/img/Doe,%20John.jpg" />
 							</div>
