Georgia: change login text to ommit mentions of email

--- a/tpl/login.frame.html
+++ b/tpl/login.frame.html
@@ -30,7 +30,7 @@
 						</div>
 					<?php endif; ?>
 					<div class="form-group">
-						<label for="inputUser">Email address or ELA user-name</label>
+						<label for="inputUser">Username</label>
 						<input type="text" class="form-control" id="inputUser" placeholder="Enter email" name="user" 
 							value="<?php if (isset($_REQUEST['user'])) echo $_REQUEST['user']; ?>">
 					</div>
@@ -44,7 +44,7 @@
 				</form>
 			</div>
 			<p>
-				<strong>Forgot your password:</strong> Provide your user-name or email and we will send you password reset instructions.
+				<strong>Forgot your password:</strong> Provide your username and we will send you password reset instructions.
 			</p>
 		</div>
 		<div class="col-sm-3 col-sm-offset-1 hidden-xs">
